# coin-problem-rs

./: Cargo.toml  README.md  benchmark.py  pyproject.toml
.github/workflows/: deploy.yml
pkg/: README.md  coin_problem_rs.d.ts  coin_problem_rs.js  coin_problem_rs_bg.wasm  coin_problem_rs_bg.wasm.d.ts  package.json
src/: lib.rs
tests/: test_solver.py
www/: index.html  index.js
